fixed z-index issue

--- a/dialog.less
+++ b/dialog.less
@@ -1,15 +1,18 @@
 @maskColor: black;
 @dialogWidth: 500px;
 @dialogHeight: 300px;
+@zIndex: 1;
 
 .mask {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	background-color: fade(@maskColor, 50);
+	z-index: @zIndex;
 }
 
 .dialog-container {
+	z-index: @zIndex;
 	position: fixed;
 	height: @dialogHeight;
 	width: @dialogWidth;
